[gd_scene load_steps=4 format=3 uid="uid://gj1umhdh8wiq"]

[ext_resource type="Theme" uid="uid://dp1pq2ublfo4j" path="res://scenes/body/invoice_table/table.tres" id="1_xil1m"]
[ext_resource type="Script" path="res://scenes/body/invoice_table/invoice_table_row.gd" id="2_6nx0w"]
[ext_resource type="PackedScene" uid="uid://b31cqr44wtv5h" path="res://scenes/body/invoice_table/invoice_table_cell.tscn" id="3_rnlgb"]

[node name="invoice_table_row" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2
theme = ExtResource("1_xil1m")
script = ExtResource("2_6nx0w")

[node name="date_input" parent="." instance=ExtResource("3_rnlgb")]
layout_mode = 2

[node name="service_input" parent="." instance=ExtResource("3_rnlgb")]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_stretch_ratio = 1.0

[node name="price_input" parent="." instance=ExtResource("3_rnlgb")]
layout_mode = 2

[connection signal="lost_focus_by_shift_tab" from="date_input" to="." method="_on_date_input_lost_focus_by_shift_tab"]
[connection signal="request_save_invoice" from="date_input" to="." method="_on_date_input_request_save_invoice"]
[connection signal="text_changed" from="date_input" to="." method="_on_date_input_text_changed"]
[connection signal="request_save_invoice" from="service_input" to="." method="_on_service_input_request_save_invoice"]
[connection signal="text_changed" from="service_input" to="." method="_on_service_input_text_changed"]
[connection signal="lost_focus_by_tab" from="price_input" to="." method="_on_price_input_lost_focus_by_tab"]
[connection signal="request_save_invoice" from="price_input" to="." method="_on_price_input_request_save_invoice"]
[connection signal="text_changed" from="price_input" to="." method="_on_price_input_text_changed"]
